--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "http-status": "^1.4.2"
+    "http-status": "^1.4.2",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
